@@ -197,6 +197,10 @@ keep_alive=0
 # please see INSTALL of FastDHT for detail
 ##include /home/yuqing/fastdht/conf/fdht_servers.conf
 
+# if log to access log
+# default value is false
+use_access_log = false
+
 
 #HTTP settings
 http.disabled=false
