@@ -1444,6 +1444,9 @@ int storage_func_init(const char *filename, \
 				"%s", pHttpDomain);
 		}
 
+		g_use_access_log = iniGetBoolValue(NULL, "use_access_log", \
+					&iniContext, false);
+
 #ifdef WITH_HTTPD
 		{
 		char *pHttpTrunkSize;
@@ -1496,7 +1499,7 @@ int storage_func_init(const char *filename, \
 			"check_file_duplicate=%d, FDHT group count=%d, " \
 			"FDHT server count=%d, FDHT key_namespace=%s, " \
 			"FDHT keep_alive=%d, HTTP server port=%d, " \
-			"domain name=%s", \
+			"domain name=%s, use_access_log=%d", \
 			g_fdfs_version.major, g_fdfs_version.minor, \
 			g_fdfs_base_path, g_fdfs_path_count, g_subdir_count_per_path,\
 			g_group_name, g_run_by_group, g_run_by_user, \
@@ -1520,7 +1523,7 @@ int storage_func_init(const char *filename, \
 			g_if_alias_prefix, g_check_file_duplicate, \
 			g_group_array.group_count, g_group_array.server_count, \
 			g_key_namespace, g_keep_alive, \
-			g_http_port, g_http_domain);
+			g_http_port, g_http_domain, g_use_access_log);
 
 #ifdef WITH_HTTPD
 		if (!g_http_params.disabled)
